docs: 删除全部学习目标（Bloom 分类）小节
- 移除 421 篇文档正文中的学习目标章节并顺延重排编号
- 清除 frontmatter 中 learningObjectives/exercises 字段（含同列块序列项）
- 修复字段剥离导致的 YAML 序列合并问题，astro sync 校验通过
- pnpm --filter @fandex/web build 通过：2338 页